--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-svg-transformer": "^1.3.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "@shopify/react-native-skia": "0.1.221"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
