--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.73.4",
     "react-native-svg-transformer": "^1.3.0",
     "styled-components": "^6.1.8",
-    "@shopify/react-native-skia": "0.1.221"
+    "@shopify/react-native-skia": "0.1.221",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
