--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@react-native/metro-config": "^0.73.5",
+    "@shopify/react-native-skia": "0.1.221",
+    "axios": "^1.6.7",
     "expo": "~50.0.6",
     "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-reanimated": "~3.6.2",
     "react-native-svg-transformer": "^1.3.0",
-    "styled-components": "^6.1.8",
-    "@shopify/react-native-skia": "0.1.221",
-    "react-native-reanimated": "~3.6.2"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
