--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.73.4",
     "react-native-reanimated": "~3.6.2",
     "react-native-svg-transformer": "^1.3.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "expo-location": "~16.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
